# jobscrper

./: .gitignore  README.md  pyproject.toml
job_service/: celery_app.py  celerybeat-schedule.db  global_state.py  main.py  tasks.py
job_service/bootstrap_init/: __init__.py  chrome_options.py  initalize.py  mongo.py  rabbitmq.py
job_service/core/: workday.py
job_service/util/: utility.py
